--- a/index.html
+++ b/index.html
@@ -5,9 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./asset/styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <title>checkoutpage</title>
 </head>
 <body>
-    <h1>checkout page</h1>
+    <header>
+        <h1>checkout</h1>
+    </header>
+    <main>
+        <section id="productions">
+            <div class="producto">
+                <div class="imagen">
+                    <img src="./asset/img/photo1.png" alt="backbag">
+                </div>
+                <div class="preciocantidad">
+                    <h3>Vintage Backbag</h3>
+                    <h3>$54.99 <span>94.99</span></h3>
+                    <div class="buttom">
+                        <button>-</button>
+                        <p>1</p>
+                        <button>+</button>
+                    </div>
+
+                </div>
+            </div>
+            <div class="producto">
+                <div class="imagen">
+                    <img src="./asset/img/photo2.png" alt="tenis">
+                </div>
+                <div class="preciocantidad">
+                    <h3>levi shoes</h3>
+
+                    <h3>$54.99 <span>94.99</span></h3>
+                    <div class="buttom">
+                        <button>-</button>
+                        <p>1</p>
+                        <button>+</button>
+                    </div>
+
+                </div>
+            </div>
+            <hr id="divisor">
+            <div class="totales">
+                <p>shipping</p>
+                <p>$19</p>
+            </div>
+            <hr>
+            <div class="totales">
+                <p>total</p>
+                <p>$125</p>
+            </div>
+        </section>
+
+        <section id="form">
+            <div class="contact">
+                <label for="email">email</label>
+                <div>
+                    <i class="fa-solid fa-envelope"></i>
+                </div>
+
+            </div>
+        </section>
+
+    </main>
+
+    <footer>
+        <p>created by brayan ospina</p>
+    </footer>
+    <script src="https://kit.fontawesome.com/b3f19fcb86.js" crossorigin="anonymous"></script>
 </body>
 </html>
